Fix gallery picture size on smaller screens

--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -8,6 +8,12 @@
     gap: 1.5rem;
     padding: 1.5rem;
 
+    @media only screen and (max-width: $bp-small) {
+        grid-template-rows: repeat(21, 5vw);
+        gap: 1rem;
+        // margin-top: 10rem;
+    }
+
     &__item {
         &--1 {
             grid-row: 1 / span 2;
@@ -20,7 +26,7 @@
         }
 
         &--3 {
-            grid-row: 1 / span 3;
+            grid-row: 1 / span 2;
             grid-column: 6 / 7;
         }
 
@@ -77,6 +83,78 @@
         &--14 {
             grid-row: 6 / span 2;
             grid-column: 8 / -1;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            &--1 {
+                grid-row: 1 / span 4;
+                grid-column: 1 / span 3;
+            }
+
+            &--2 {
+                grid-row: 1 / span 5;
+                grid-column: 4 / span 5;
+            }
+
+            &--3 {
+                grid-row: 5 / span 4;
+                grid-column: 1 / span 3;
+            }
+
+            &--4 {
+                grid-row: 6 / span 3;
+                grid-column: 4 / span 3;
+            }
+
+            &--5 {
+                grid-row: 6 / span 3;
+                grid-column: 7 / -1;
+            }
+
+            &--6 {
+                grid-row: 9 / span 2;
+                grid-column: 1 / span 2;
+            }
+
+            &--7 {
+                grid-row: 9 / span 2;
+                grid-column: 3 / span 3;
+            }
+
+            &--8 {
+                grid-row: 9 / span 2;
+                grid-column: 6 / span 3;
+            }
+
+            &--9 {
+                grid-row: 11 / span 3;
+                grid-column: 1 / span 4;
+            }
+
+            &--10 {
+                grid-row: 11 / span 3;
+                grid-column: 5 / -1;
+            }
+
+            &--11 {
+                grid-row: 14 / span 3;
+                grid-column: 1 / span 5;
+            }
+
+            &--12 {
+                grid-row: 14 / span 5;
+                grid-column: 6 / -1;
+            }
+
+            &--13 {
+                grid-row: 17 / -1;
+                grid-column: 1 / 6;
+            }
+
+            &--14 {
+                grid-row: 19 / -1;
+                grid-column: 6 / -1;
+            }
         }
     }
 
